# graphics-final-project

./: CMakeLists.txt  README.md
shaders/: ground.frag  ground.vert  mesh.frag  mesh.vert
src/: main.cpp
src/app/: Application.cpp  Application.h  TimestepRecorder.cpp  TimestepRecorder.h
src/fracture/: UniformFracture.cpp  UniformFracture.h  VoronoiFracture.cpp  VoronoiFracture.h
src/math/: Plane.h
src/mesh/: Mesh.cpp  Mesh.h  MeshClipper.cpp  MeshClipper.h  MeshProperties.cpp  MeshProperties.h  OBJLoader.cpp  OBJLoader.h
src/physics/: PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h
src/render/: Camera.cpp  Camera.h  GPUMesh.cpp  GPUMesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
